<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- groups string -->
    <string name="app_name">族族</string>
    <string name="hello_world">欢迎来到哥汉族族！</string>
    <string name="action_settings">Settings</string>
    <string name="tab_zz">族族</string>
    <string name="tab_tz">通知</string>
    <string name="tab_dt">动态</string>
    <string name="tab_wo">我</string>
    <string name="tab_sz">设置</string>
    <string name="tab_tx">通讯</string>
    <string name="top_title">标题</string>
    <string name="top_title_zz">族族</string>
    <string name="top_title_wo">我</string>
    <string name="top_title_sz">设置</string>
    <string name="top_title_tz">通知</string>
    <string name="top_title_tx">通讯</string>
    <string name="top_title_sydt">所有动态</string>
    <string name="top_title_tstz">推送通知</string>
    <string name="top_title_jyxx">教育信息</string>
    <string name="top_title_zczh">注册账号</string>
    <string name="top_title_wdzl">我的资料</string>
    <string name="top_title_wdzy">我的主页</string>
    <string name="top_title_wdxx">我的消息</string>
    <string name="top_title_wdsc">我的收藏</string>
    <string name="top_left_back">返回</string>
    <string name="top_right_next">继续</string>
    <string name="top_search">搜索</string>
    <string name="top_create">创建</string>
    <string name="tips_recently_seen">常用族族  ( 10 )</string>
    <string name="tips_friend_circle">朋友圈  ( 7 )</string>
    <string name="tips_sort">排序</string>
    <string name="tips_more">更多</string>
    <string name="tips_create_society">创建族族</string>
    <string name="tips_my_society">我的族族  ( 11 )</string>
    <string name="tips_private_society">私密族族  ( 8 )</string>
    <string name="tips_attention_society">封闭族族  ( 7 )</string>
    <string name="tips_public_society">公开族族  ( 7 )</string>
    <string name="tips_hot_society">热门族族☆</string>
    <string name="nearby_item_but_join">参加</string>
    <string name="nearby_item_but_no_interest">不感兴趣</string>
	<string name="drawer_left_tag">LEFT</string>
    <string name="zz_status_private_des">只有成员能找到族族并查看发布内容</string>
    <string name="zz_status_public_des">任何用户都能看到族族、成员和成员发帖</string>
    <!-- society string -->
    <string name="society_tab1">首页</string>
    <string name="society_tab2">照片</string>
    <string name="society_tab3">群聊</string>
    <string name="society_tab4">活动</string>
    <string name="society_tab5">更多</string>
    <string name="photo_tab1">照片</string>
    <string name="photo_tab2">相册</string>
    <string name="border_top">Border Top</string>
    <string name="border_bottom">Border Bottom</string>
    <string name="image_url">Image Url</string>
    <string name="createnewalbum">创建新相册</string>
	<string name="add_society_img">添加封面照片</string>
	<string name="likeit">赞</string>
	<string name="comment">评论</string>
	<string name="post_message">发帖</string>
	<string name="post_pic">拍照</string>
	<string name="createalbum">创建相册</string>
	<string name="create">创建</string>
	<string name="fbxz">封闭族族</string>
	<string name="wmmxc">未命名相册</string>
	<string name="addms">添加描述...</string>
	<string name="act_foreshow">活动预告</string>
	<string name="act_advance">往期活动</string>
	<string name="back">返回</string>
	<string name="edit_society_setup">编辑族族设置</string>
	<string name="edit_society_name">编辑名称和说明</string>
	<string name="edit_society_background_photo">更改封面照片</string>
	<string name="edit_society_photo">更改头像照片</string>
	
	<string name="members">成员</string>
	<string name="society_describe">族族说明：在这里记录我们的生活，让我们了解我们的生活</string>
	<string name="notice_setup">通知设置</string>
	<string name="notice_send">(推送通知)</string>
	<string name="add_to_common">加入常用族族</string>
	<string name="add_to_desktop">添加至主屏幕</string>
	<string name="document">文件</string>
	<string name="exit_society">退出</string>
	<string name="switch_society">切换族族</string>
	<string name="signup">注册</string>
	<string name="login">登录</string>
	<string name="login_hint">手机账号/邮箱账号</string>
	<string name="password_hint">请输入密码</string>
	<string name="forget_password">忘记密码?</string>
	<string name="more_title">更多</string>
	<string name="more_headleft">族族</string>
	<string name="add_in">加入</string>
	<string name="letter">文字</string>
	<string name="photograph">拍照</string>
	<string name="select_from_album">从手机相册选择</string>
	
	<string name="user_name">Flying Girl</string>
</resources>
