<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <include layout="@layout/view_common_top_image" />

    <include layout="@layout/view_common_search" />

    <View style="@style/dividing_view" />

    <com.geihoo.view.ElasticityScrollView
        android:id="@+id/main_srcoll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"  >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!--
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_recent_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sys_small_text_size_margin"
                    android:text="@string/tips_recently_seen"
                    android:textColor="@color/sys_sub_color"
                    android:textSize="@dimen/sys_small_text_size" />

                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_recent_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numColumns="3"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>
            </LinearLayout>            -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sys_small_text_size_margin"
                >

                <TextView
                    android:id="@+id/tv_recent_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tips_recently_seen"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sys_small_text_size" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="编辑"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/sys_sub_color"
                    android:textSize="@dimen/sys_small_text_size" />
                
                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_common_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_recent_seen"
                    android:layout_marginTop="20dp"
                    android:numColumns="4"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical" >

                <View style="@style/dividing_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sys_small_text_size_margin"
                    android:text="@string/tips_my_society"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sys_small_text_size" />

                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_my_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numColumns="4"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>

                <TextView
                    android:id="@+id/tv_more_my_society"
                    style="@style/more_text_view" /> 
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <View style="@style/dividing_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sys_small_text_size_margin"
                    android:text="@string/tips_attention_society"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sys_small_text_size" />

                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_attention_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numColumns="4"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>

                <TextView
                    android:id="@+id/tv_more_attention_society"
                    style="@style/more_text_view" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <View style="@style/dividing_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sys_small_text_size_margin"
                    android:text="@string/tips_public_society"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sys_small_text_size" />

                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_public_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numColumns="4"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>

                <TextView
                    android:id="@+id/tv_more_public_society"
                    style="@style/more_text_view" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <View style="@style/dividing_view" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sys_small_text_size_margin"
                    android:text="@string/tips_hot_society"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textSize="@dimen/sys_small_text_size" />

                <com.geihoo.view.MyGridView
                    android:id="@+id/mgv_hot_group_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:numColumns="4"
                    android:verticalSpacing="10dp" >
                </com.geihoo.view.MyGridView>

                <TextView
                    android:id="@+id/tv_more_hot_society"
                    style="@style/more_text_view" />
            </LinearLayout>
        </LinearLayout>
    </com.geihoo.view.ElasticityScrollView>

</LinearLayout>